tests/snapshots/snapshot_provider_test__snapshot_open_meteo_dashboard.snap
---
source: tests/snapshot_provider_test.rs
expression: svg_content
---
<svg width="800" height="480" font-family="Roboto, sans-serif" xmlns="http://www.w3.org/2000/svg">

    <!-- tspan doesn't work well with the degree symbol ° for some fonts!-->
    <!-- Avoid using tspan with text-anchor, `dx` or `dy`, resvg doesn't handle it properly -->
    <!-- see https://github.com/linebender/resvg/issues/583 -->

    <defs>
        <linearGradient id="fillGradient" x1="0%" y1="100%" x2="0%" y2="0%">
            <stop offset="0%" stop-color="blue" stop-opacity="0.5" />
            <stop offset="100%" stop-color="blue" stop-opacity="0.1" />
        </linearGradient>
        <pattern id="dots" patternUnits="userSpaceOnUse" width="10" height="10">
            <circle cx="5" cy="5" r="2" fill="blue" />
        </pattern>
        <pattern id="grid" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 10 0 L 0 0 0 10" fill="none" stroke="blue" stroke-width="1" />
        </pattern>
        <pattern id="diagonal-lines" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 10 L 10 0" stroke="blue" stroke-width="2" />
        </pattern>
        <pattern id="crosshatch" patternUnits="userSpaceOnUse" width="10" height="10">
            <path d="M 0 0 L 10 10 M 10 0 L 0 10" stroke="blue" stroke-width="1" />
        </pattern>
    </defs>

    <rect width="100%" height="100%" fill="white" />

    <!-- Current Day Information -->
    <!-- Due to resvg bug, the position is intentionally off to compensate for the bug -->
    <!-- Do not modify the x position of current_hour_temp and current_hour_feels_like, see above issue at the start of the file -->
    <text x="400" y="50" font-size="35" fill="black" text-anchor="middle">Saturday, 25 October</text>
    <image x="0" y="0" width="200" height="180" href="static/fill-svg-static/partly-cloudy-night.svg" />


    <!-- Current temperature and Feels Like temperature -->
    <text x="266" y="128" font-size="70" fill="red" text-anchor="middle">
        16
        <tspan baseline-shift="27" dx="-20" font-size="33">°C</tspan>
    </text>

    <text x="246" y="158" text-anchor="middle" font-size="18" fill="black">
        <tspan>Feels</tspan>
        <tspan dy="15.5" dx="-46.6">Like</tspan>
        <tspan font-family="Roboto-Regular-Dashed" dominant-baseline="middle" font-size="55" fill="green"
            dx="10" dy="-7">
            15
            <tspan baseline-shift="12" dx="-15" font-size="30">°</tspan>
        </tspan>
    </text>

    <!-- Diagnostic Message -->
    <svg x="580" y="0" width="200" height="100" text-anchor="middle" visibility="hidden">
        <!-- Cascading diagnostic icons (stacked by priority) -->
        
        <!-- Message for highest priority error only -->
        <text x="100" y="60" width="200" font-size="12">
            N/A
        </text>
    </svg>

    <!-- Version Information (displayed when debugging enabled) -->
    <svg x="700" y="0" font-size="10" text-anchor="end" visibility="hidden">
        <text x="90" y="15" fill="black">
            
        </text>
        <text x="90" y="25" fill="black">
            
        </text>
        <text x="90" y="35" fill="black">
             
        </text>
    </svg>

    <!-- Sunset/Sunrise Information -->
    <svg x="30" y="150">
        <image x="0" y="0" width="75" height="75" href="static/fill-svg-static/sunrise.svg" />
        <text x="12" y="70" text-anchor="start" font-size="20" fill="black">06:21</text>

        <image x="70" y="0" width="75" height="75" href="static/fill-svg-static/sunset.svg" />
        <text x="83" y="70" text-anchor="start" font-size="20" fill="black">19:47</text>
    </svg>

    <g transform="translate(-15, 0)">

        <!-- vertical lines with artistic variations -->
        <svg class="line">
            <path d="M95 240 C90 220, 95 320, 95 470" />
            <path d="M150 240 C155 220, 145 320, 150 470" />

            <!-- horizontal lines with artistic variations -->
            <path d="M40 260 C150 261, 250 258, 185 260" />
            <path d="M40 330 C150 325, 250 335, 185 330" />
            <path d="M40 400 C150 402, 250 399, 185 400" />
        </svg>

        <!-- row header-->
        <svg x="15" y="210" label="UV-index" text-anchor="start">
            <text x="16" y="43.5" fill="black" font-size="20">Metric
            </text>

            <text x="85" y="43.5" fill="black" font-size="20">Now
            </text>
            <text x="140" y="43.5" fill="black" font-size="20">Max
                <tspan baseline-shift="super" font-size="17" dx="-3">24h</tspan>
            </text>
        </svg>

        <!-- UV Index -->
        <svg x="20" y="260" label="UV-index" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/uv-index-high.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">6
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="normal">7
            </text>
        </svg>

        <!-- Wind Information -->
        <svg x="20" y="330" label="wind" text-anchor="middle">
            <text x="42.2" y="66.2" fill="black" font-size="15.1" text-anchor="middle">
                km/h
            </text>
            <image width="75" height="75" href="static/fill-svg-static/wind.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">6
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="italic">16
            </text>
        </svg>

        <!-- Relative Humidity -->
        <svg x="20" y="400" label="relative_humidity" text-anchor="middle">
            <image width="75" height="75" href="static/fill-svg-static/humidity-plus.svg" />
            <text x="100" y="45.5" font-size="30" fill="black">60
            </text>
            <text x="155" y="45.5" font-size="30" fill="black"
                font-style="italic">91
            </text>
        </svg>
    </g>


    <!-- Forecast for the next 6 days -->
    <svg x="292" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Sun</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/extreme-day-drizzle.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">23°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="373" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Mon</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">13°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">6°</tspan>
        </text>
    </svg>

    <svg x="454" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Tue</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">17°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="535" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Wed</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">18°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">10°</tspan>
        </text>
    </svg>

    <svg x="616" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Thu</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/clear-day.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">19°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">8°</tspan>
        </text>
    </svg>

    <svg x="697" y="30">
        <text x="50" y="65" text-anchor="middle" font-size="20" fill="black">Fri</text>
        <image x="12" y="50" width="75" height="100" href="static/fill-svg-static/partly-cloudy-day-drizzle.svg" />
        <text y="155" font-size="20" fill="black">
            <tspan x="52" text-anchor="end">25°</tspan>
            <tspan x="52" text-anchor="middle">|</tspan>
            <tspan x="52" text-anchor="start">13°</tspan>
        </text>
    </svg>

    <!-- Graph for hourly forecast -->
    <svg x="220" y="160" width="560" height="350" viewBox="-50 0 690 300" preserveAspectRatio="xMidYMid meet"
        style="overflow: visible;">
        <path stroke="black" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <!-- X axis Guidelines -->
        <path stroke="black" stroke-linejoin="round" stroke-width="1" d="M 0 300 L 600 300 M 0 300 v -300 m 0 2 v -2 M 100 300 v -300 m 0 2 v -2 M 200 300 v -300 m 0 2 v -2 M 400 300 v -300 m 0 2 v -2 M 500 300 v -300 m 0 2 v -2 M 600 300 v -300 m 0 2 v -2" fill="none"
            stroke-dasharray="5,10" />
        <!-- X Labels -->
        <text x="0" y="320" fill="black" font-size="19" text-anchor="middle">12pm</text><text x="100" y="320" fill="black" font-size="19" text-anchor="middle">4pm</text><text x="200" y="320" fill="black" font-size="19" text-anchor="middle">8pm</text><text x="300" y="320" fill="black" font-size="19" text-anchor="middle">12am</text><text x="400" y="320" fill="black" font-size="19" text-anchor="middle">4am</text><text x="500" y="320" fill="black" font-size="19" text-anchor="middle">8am</text><text x="600" y="320" fill="black" font-size="19" text-anchor="middle">12pm</text><line x1="300" y1="0" x2="300" y2="300" stroke="black" stroke-width="2" stroke-dasharray="3,3" />
                   <text x="310" y="170" fill="black" font-size="19" font-style="italic"  transform="rotate(-90, 280, 135)" text-anchor="start">Sunday</text>
        <!-- Y Labels -->
        <text x="-10" y="300"  fill="black" font-size="35" text-anchor="end" dx="8" dy="4">12°</text><text x="-10" y="240"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">13.7°</text><text x="-10" y="180.00002"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">14.9°</text><text x="-10" y="119.999985"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">16.1°</text><text x="-10" y="60.00003"  fill="black" font-size="19" text-anchor="end" dx="8" dy="4">17.3°</text><text x="-10" y="0"  fill="black" font-size="35" text-anchor="end" dx="8" dy="4">18°</text>
        <!-- Y right Labels -->
        <text x="610" y="300" fill="black"  font-size="19" text-anchor="start" dy="4">0%</text><text x="610" y="240" fill="black"  font-size="19" text-anchor="start" dy="4">20%</text><text x="610" y="180" fill="black"  font-size="19" text-anchor="start" dy="4">40%</text><text x="610" y="120" fill="black"  font-size="19" text-anchor="start" dy="4">60%</text><text x="610" y="60" fill="black"  font-size="19" text-anchor="start" dy="4">80%</text><text x="610" y="0" fill="black"  font-size="19" text-anchor="start" dy="4">100%</text>
        <path stroke="red" stroke-linejoin="round" transform="translate(0, 300) scale(1, -1)"
            d="M 0.0000 190.8334C 34.7826 233.3333, 43.4783 251.6666, 52.1739 265.0000C 60.8696 278.3333, 69.5652 297.5000, 78.2609 300.0000C 86.9565 302.5000, 95.6522 308.3334, 104.3478 280.0000C 113.0435 251.6667, 121.7391 159.1667, 130.4348 130.0000C 139.1304 100.8334, 147.8261 113.3334, 156.5217 105.0000C 165.2174 96.6667, 173.9130 87.5000, 182.6087 80.0000C 191.3043 72.5000, 200.0000 65.8333, 208.6956 60.0000C 217.3913 54.1667, 226.0870 46.6666, 234.7826 45.0000C 243.4783 43.3333, 252.1739 48.3333, 260.8696 50.0000C 269.5652 51.6667, 278.2609 54.1667, 286.9565 55.0000C 295.6521 55.8334, 304.3478 55.8334, 313.0435 55.0000C 321.7391 54.1667, 330.4348 52.5000, 339.1304 50.0000C 347.8261 47.5000, 356.5217 43.3333, 365.2174 40.0000C 373.9131 36.6667, 382.6087 31.6667, 391.3044 30.0000C 400.0000 28.3334, 408.6956 29.1667, 417.3913 30.0000C 426.0869 30.8333, 434.7826 33.3333, 443.4782 35.0000C 452.1739 36.6667, 460.8696 36.6667, 469.5652 40.0000C 478.2609 43.3333, 486.9565 42.5000, 495.6522 55.0000C 504.3478 67.5000, 513.0435 95.8333, 521.7391 115.0000C 530.4348 134.1667, 539.1304 156.6666, 547.8260 170.0000C 556.5217 183.3333, 565.2173 187.5000, 573.9130 195.0000C 582.6086 202.5000, 595.6522 211.6666, 600.0000 215.0000" stroke-width="3.0" fill="none" />
        <path stroke="green" stroke-linejoin="round" stroke-dasharray="5,5"
            transform="translate(0, 300) scale(1, -1)" d="M 0.0000 120.0000C 34.7826 161.6666, 43.4783 196.6666, 52.1739 215.0000C 60.8696 233.3333, 69.5652 252.5000, 78.2609 255.0000C 86.9565 257.5000, 95.6522 258.3333, 104.3478 230.0000C 113.0435 201.6667, 121.7391 113.3333, 130.4348 85.0000C 139.1304 56.6667, 147.8261 67.5000, 156.5217 60.0000C 165.2174 52.5000, 173.9130 44.1667, 182.6087 40.0000C 191.3043 35.8333, 200.0000 36.6667, 208.6956 35.0000C 217.3913 33.3333, 226.0870 27.5000, 234.7826 30.0000C 243.4783 32.5000, 252.1739 45.0000, 260.8696 50.0000C 269.5652 55.0000, 278.2609 59.1667, 286.9565 60.0000C 295.6521 60.8333, 304.3478 59.1667, 313.0435 55.0000C 321.7391 50.8334, 330.4348 42.5000, 339.1304 35.0000C 347.8261 27.5000, 356.5217 15.0000, 365.2174 10.0000C 373.9131 5.0000, 382.6087 6.6667, 391.3044 5.0000C 400.0000 3.3334, 408.6956 -0.8333, 417.3913 0.0000C 426.0869 0.8333, 434.7826 8.3333, 443.4782 10.0000C 452.1739 11.6667, 460.8696 7.5000, 469.5652 10.0000C 478.2609 12.5000, 486.9565 18.3333, 495.6522 25.0000C 504.3478 31.6667, 513.0435 41.6667, 521.7391 50.0000C 530.4348 58.3333, 539.1304 65.0000, 547.8260 75.0000C 556.5217 85.0000, 565.2173 97.5000, 573.9130 110.0000C 582.6086 122.5000, 595.6522 143.3333, 600.0000 150.0000" stroke-width="3.0" fill="none" />
        <path transform="translate(0, 300) scale(1, -1)" d="M 0.0000 15.0000L 26.086956 54L 52.173912 90L 78.260864 84L 104.347824 45L 130.43478 90L 156.52173 99L 182.60869 90L 208.69565 54L 234.78261 30L 260.86957 54L 286.9565 69L 313.04346 174L 339.13043 234L 365.21738 240L 391.30435 279L 417.3913 255L 443.47824 234L 469.56522 180L 495.65216 129L 521.73914 99L 547.82605 120L 573.913 99L 600 135 L 600 0 L 0 0Z" fill="blue"
            fill-opacity="25%" />
        <defs>
            <linearGradient id="UVGradient" gradientUnits="objectBoundingBox" x1="0%" y1="0%" x2="100%" y2="0%">
                <stop offset="0.00%" stop-color="orange"/><stop offset="4.35%" stop-color="orange"/><stop offset="8.70%" stop-color="orange"/><stop offset="13.04%" stop-color="yellow"/><stop offset="17.39%" stop-color="green"/><stop offset="21.74%" stop-color="green"/><stop offset="26.09%" stop-color="green"/><stop offset="30.43%" stop-color="white"/><stop offset="34.78%" stop-color="white"/><stop offset="39.13%" stop-color="white"/><stop offset="43.48%" stop-color="white"/><stop offset="47.83%" stop-color="white"/><stop offset="52.17%" stop-color="white"/><stop offset="56.52%" stop-color="white"/><stop offset="60.87%" stop-color="white"/><stop offset="65.22%" stop-color="white"/><stop offset="69.57%" stop-color="white"/><stop offset="73.91%" stop-color="white"/><stop offset="78.26%" stop-color="white"/><stop offset="82.61%" stop-color="white"/><stop offset="86.96%" stop-color="white"/><stop offset="91.30%" stop-color="white"/><stop offset="95.65%" stop-color="white"/><stop offset="100.00%" stop-color="green"/>
            </linearGradient>
        </defs>
        <rect x="0" y="-14" width="600" height="8" fill="url(#UVGradient)" />
        <path stroke="black" stroke-linejoin="round" stroke-width="2" d="M 0 300 L 600 300 M 0 295 L 0 305 M 100 295 L 100 305 M 200 295 L 200 305 M 300 295 L 300 305 M 400 295 L 400 305 M 500 295 L 500 305 M 600 295 L 600 305" fill="none" />
        <path stroke="red" stroke-linejoin="round" stroke-width="2" d="M 0 0 L 0 300 M -5 300 L 5 300 M -5 240 L 5 240 M -5 180.00002 L 5 180.00002 M -5 119.999985 L 5 119.999985 M -5 60.00003 L 5 60.00003 M -5 0 L 5 0" />
        <path stroke="blue" stroke-linejoin="round" stroke-width="3" d="M 600 0 L 600 300 M 595 300 L 605 300 M 595 240 L 605 240 M 595 180 L 605 180 M 595 120 L 605 120 M 595 60 L 605 60 M 595 0 L 605 0"
            fill="none" />
    </svg>
    <!-- These are needed render svg in browser/ide -->
    <style>
        @font-face {
            font-family: 'Roboto';
            src: url('static/fonts/Roboto-Regular.ttf') format('truetype');
        }

        @font-face {
            font-family: 'Roboto-Regular-Dashed';
            src: url('static/fonts/Roboto-Regular-Dashed.ttf') format('truetype');
        }

        .line {
            stroke: black;
            stroke-width: 2;
            stroke-linecap: round;
            stroke-linejoin: round;
        }
    </style>
</svg>
